--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -60,6 +60,7 @@
                                 on the side, while the user can still work on their respective panels. </p>
                         </div>
                     </li>
+                    <div class="watermark">Draft</div>
                     <li class="list-group-item">
                         <i class=" fa fa-fw fa-briefcase"></i>
                         <a ng-click="showProjectBar = !showProjectBar">Project Bar</a>
