--- a/website/app/index.html
+++ b/website/app/index.html
@@ -16,6 +16,7 @@
     <link href="assets/css/jqcloud.css" rel="stylesheet">
     <link href="assets/css/tree-grid.css" rel="stylesheet">
     <link href="assets/css/zenburn.css" rel="stylesheet">
+    <link href="assets/css/nzAnimate.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -90,6 +91,7 @@
 <script src="assets/js/TreeModel-min.js"></script>
 <script src="assets/js/highlight.pack.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-cookies.min.js"></script>
 <script src="assets/js/angular/angular-strap.min.js"></script>
 <script src="assets/js/angular/angular-ui.js"></script>
