--- a/website/app/index.html
+++ b/website/app/index.html
@@ -12,8 +12,10 @@
     <!--[if lt IE 9]>
     <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- Fav and touch icons -->
+    <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
 
-    <!-- build:css css/style.css -->
+    <!-- build:css assets/css/style.css -->
     <link href="assets/css/bootstrap.css"  rel="stylesheet">
     <link href="assets/css/awesome-bootstrap-checkbox.css" rel="stylesheet">
     <link href="assets/css/select2/select2.css" rel="stylesheet">
@@ -22,9 +24,6 @@
     <link href="assets/css/tree-grid.css" rel="stylesheet">
     <link href="assets/css/zenburn.css" rel="stylesheet">
     <link href="assets/css/nzAnimate.css" rel="stylesheet">
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/mc-favicon.ico">
-
     <link href="assets/css/thumbnail.css" rel="stylesheet">
     <link href="assets/css/periodic-table.css" rel="stylesheet">
     <link href="assets/css/bootstrap-vertical-tabs.css" rel="stylesheet">
