--- a/website/app/application/core/machines/machines.html
+++ b/website/app/application/core/machines/machines.html
@@ -1,6 +1,6 @@
 <div class="container-fixed" ng-controller="machines"><br>
     <div class="row">
-        <div class="col-sm-2 col-md-2">
+        <div ng-if="false" class="col-sm-2 col-md-2">
             <button class="btn btn-default btn-primary" ng-click="toggleCustom = !toggleCustom">New</button>
         </div>
         <!--<div saved-notification="" message="message"></div>-->
@@ -10,7 +10,7 @@
             <form name="Form" class="form-horizontal">
                 <legend>Create Machine</legend>
                 <div upperlevel-object="" bk="bk" doc="doc" edit="false"></div>
-                <div df-properties="" default-properties="doc.default_properties"></div>
+                <!--<div df-properties="" default-properties="doc.default_properties"></div>-->
                 <!--<label>Range </label>-->
                 <!--<input class="col-sm-2 form-control" type="number"  ng-model="Form.range"-->
                        <!--min="5" max="8" validator="range"/>-->
