--- a/website/app/index.html
+++ b/website/app/index.html
@@ -32,9 +32,9 @@
     <link href="assets/css/vis.css" rel="stylesheet">
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/nsPopover.css" rel="stylesheet">
-    <!-- endbuild -->
     <!-- Application style sheet -->
     <link href="style-3.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
 <body>
 <div class="row">
@@ -82,6 +82,7 @@
 
 <!-- ---------------------------- External dependencies ----------------->
 
+<!--
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
@@ -92,8 +93,19 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular-sanitize.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.2.1/textAngular.min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.3.1/restangular.min.js"></script>
+-->
 
 <!-- build:jsassets js/assets.js -->
+<script src="assets/js/jquery-1.11.2.min.js"></script>
+<script src="assets/js/jquery-ui.min.js"></script>
+<script src="assets/js/angular/masonry.pkgd.min.js"></script>
+<script src="assets/js/angular/imagesloaded.pkgd.min.js"></script>
+<script src="assets/js/angular/angular.min.js"></script>
+<script src="assets/js/angular/angular-animate.min.js"></script>
+<script src="assets/js/angular/angular-cookies.min.js"></script>
+<script src='assets/js/angular/textAngular-sanitize.min.js'></script>
+<script src='assets/js/angular/textAngular.min.js'></script>
+<script src="assets/js/angular/restangular.min.js"></script>
 <script src="assets/js/flow.js"></script>
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
