fixed the toggle sidboard bug

--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -5,7 +5,7 @@
             Items ({{matches.length | number}})
         </span>
         <span ng-if="splitIcon" class="pull-right bar-control">
-            <a ng-click="splitScreen('sideboard', 'column3')">
+            <a ng-click="splitScreen()">
                 <i class="fa fa-fw"
                    ng-class="{'fa-columns': !isSplitExpanded(), 'fa-close mc-danger': isSplitExpanded()}"></i>
             </a>
