provenance creation userguide

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -303,19 +303,85 @@
                             <div style="padding-top: 10px;padding-bottom: 10px;">
                                 <img class="img-responsive" src="assets/img/userguide/show-process1.1.png">
                             </div>
-                            <b>How to create a provenance:</b>
+                            <b>How to create a provenance:</b><br><br>
 
-                            <p>Based on the template you choose, provenance steps may vary. In general we can classify
-                                the steps as:</p>
-                            <b>1. Process</b>
+                            <b>Step1 : Choose Template</b>
 
-                            <p>Process (experiment/computation): Choose a template from the dropdown list and hit start.
-                                Now enter the name of the process and other details and move on to the next step which
-                                is inputs </p>
+                            <p>In order to create provenance first you have to choose a template.
+                                Based on the template you choose, provenance steps may vary.
+                                For Example: You wanted to
+                                collect data through Atom Probe Experiment.
+                                So now you have to choose APT Data Collection Template from the drop-down list
+                            </p>
 
-                            <b>2. Inputs</b>
-                            <b>3. Outputs</b>
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/prov-choose-template.png">
+                            </div>
+                            <p>After you choose the template it will will show you what are the steps involved to create
+                                a
+                                provenance.</p>
 
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive" src="assets/img/userguide/create-provenance/prov-steps.png">
+                            </div>
+                            <b>Step2 : Process Details</b>
+
+                            <p>Here you have to fill in the process name( Experiment/Computation) which is a required
+                                field. And fill out other details as necessary.</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/process-step-annotated.png">
+                            </div>
+                            <b>Step2: Inputs</b>
+
+                            <p>Input Steps vary based on the template chosen. Here for the "APT Data Collection"
+                                template there are 3 sub steps under inputs.
+                                1) Choose a sample 2) Settings 3) Files</p>
+                            <b>1. Choose a Sample</b>
+
+                            <p>You can choose a sample from the available using dropdown menu or create a new
+                                sample </p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/choose-sample-annotated.png">
+                            </div>
+                            <b>Settings</b>
+
+                            <p>Fill out settings as per the template</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/settings-annotated.png">
+                            </div>
+                            <b>Add Files</b>
+
+                            <p>Files can be added using files panel(project tree). All the files inside this panel will
+                                give you an
+                                option called "Add to process". By clicking this button you can add files to the
+                                provenance</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/input-files-annotated.png">
+                            </div>
+                            <b>Step3: Outputs</b>
+
+                            <p>Same as inputs</p>
+                            <b>Step 4: Submit</b>
+
+                            <p>In this step you can review all your content by clicking on checkbox. Then
+                                submit the provenance. After provenance is submitted you cannot make any
+                                modifications.So if you are not sure about any step you can save it as a draft which
+                                will save it in the list of drafts and make
+                                modifications at a later point.</p>
+
+                            <div style="padding-top: 10px;padding-bottom: 10px;">
+                                <img class="img-responsive"
+                                     src="assets/img/userguide/create-provenance/submit-provenance-annotated.png">
+                            </div>
                         </div>
                     </li>
                     <li class="list-group-item list-group-item">
